[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "2.0.5"
itertools = "0.13.0"
memoize = "0.4.2"
regex = "1.11.1"
rustc-hash = "2.1.0"

[lib]
bench = false
name = "aoc2024"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aoc24_bin"
